--- a/HTML/ADA.html
+++ b/HTML/ADA.html
@@ -8,17 +8,18 @@
                 margin-left: 10%
             }
         </style>
-    </head>
+    </head> 
 
     <body>
-        <ul style="width:400px;">
+        <ul >
             <li style ="display: inline-flex; color: blue; font-family:Verdana; font-size:x-large; text-align:left;">
                 <b>coursera</b>
             </li>
             <li style ="display: inline-flex;font-size:medium"> |</li>
             <li style ="display: inline-flex; color: blue;font-size:medium; width: 150px;">
-                <b>THE AMERICAN  DREAM ACADEMY</b>
+                <b>THE AMERICAN  <span style="color: rgb(238, 24, 24);">DREAM </span>ACADEMY</b>
             </li>
+            <li style="display:inline-flex; border-style:inset; border-color: black; border-radius: 5px; padding: 10px,50px,10px, 100px">Search in the American Dream Academy</li>
         </ul>
         <hr>
         <h1>The American Dream Academy</h1>
