changed list to table

--- a/HTML/ADA.html
+++ b/HTML/ADA.html
@@ -36,17 +36,13 @@
 
     <body>
         <header >
-            <ul > 
-                <li style ="display: inline-flex; color: blue; font-size:90%;">coursera
-                </li>
-                <li style ="display: inline-flex; color: blue; font-size: 90%;">
-                    <b>THE AMERICAN  <span style="color: rgb(238, 24, 24);"><br>DREAM </span>ACADEMY</b>
-                </li>
-                <li style=" width: 40%; display:inline-flex; border-style:groove; border-color: rgb(0, 0, 0); border-radius: 3px; 
-                 padding: 10px;padding-left:15px; border-width:thin;">
-                    Search in 'The American Dream Academy'...
-                </li>
-            </ul>
+            <table>
+                <tr>
+                    <td>coursera</td>
+                    <td> <b>THE AMERICAN  <span style="color: rgb(238, 24, 24);"><br>DREAM </span>ACADEMY</b></td>
+                    <td> Search in 'The American Dream Academy'...</td>
+                </tr>
+            </table>
         </header>
         
         <hr style="margin-left:-12%;">
