--- a/HTML/ADA.html
+++ b/HTML/ADA.html
@@ -6,25 +6,40 @@
             .dropdown{
                 display: inline-block;
                 position: relative;
-                width: 35%;
+                margin-right: 300px;
+                width: 80%;
             }
             .dropdownContent{
                 display: none;
                 width: 100%;
-               box-shadow: 0px 8px 16px 0px rgba(0,0,0,2;
+               box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
                 position: absolute;
                 overflow: auto;
                
+            }
+            .dropdown:hover.dropdownContent{
+                display: block;
+            }
+            .dropdownContent a{
+                display:block;
+                padding: 5px;
+                text-decoration: none;
+            }
+            .dropdownContent a:hover{ 
+                 background-color: gray;
+
             }
             body{
               font-size:medium;
                 font-family: sans-serif;
                 height: 100%;
+                background-color: blueviolet;
             }
              header{
-                height: 8%;
+                height: 5%;
                 padding-top:-6% ;
                 padding-bottom: -9%;
+                margin:-7px;
                 background-color: brown;
              }
              nav{
@@ -51,13 +66,13 @@
         <header>
             <table style="width:100%; background-color: white;">
                 <tr>
-                    <td style ="color: blue; font-size:170%;padding-left:40px;"><b>coursera</b></td>
-                    <td  style ="color: blue; font-size: 100%;"> <b>THE AMERICAN  <span style="color: rgb(238, 24, 24);">
+                    <td style ="color: blue; font-size:170%;padding-left:40px;background-color: green;"><b>coursera</b></td>
+                    <td  style ="color: blue; font-size: 80%; background-color: red;"> <b>THE AMERICAN  <span style="color: rgb(238, 24, 24);">
                         <br>DREAM </span>ACADEMY</b></td>
-                    <td style=" width: 60%; border-style:groove; border-color: rgb(0, 0, 0); border-radius: 3px;padding-left:15px; border-width:thin;"> 
+                    <td style=" background-color: green;width: 30%; border-style:groove; border-color: rgb(0, 0, 0); border-radius: 3px;margin-right:3%; border-width:thin;"> 
                         Search in 'The American Dream Academy'...
                     </td>
-                    <td>
+                    <td style = "background-color: red ; width: 20%;">
                         <div class="dropdown">
                            <button>
                                 <table>
@@ -68,13 +83,13 @@
                                 </table>
                             </button>
                            <div class="dropdownContent">
-                                 <p>Profile</p>
-                                 <p>Updates</p>
-                                 <p>My Purchases</p>
-                                 <p>Settings</p>
-                                <p>Accomplishments</p>
-                                <p>Help Center</p>
-                                <p>Log out</p>
+                                 <a href="w3schools.com">Profile</a>
+                                 <a href="w3schools.com">Updates</a>
+                                 <a href="w3schools.com">My Purchases</a>
+                                 <a href="w3schools.com">Settings</a>
+                                <a href="w3schools.com">Accomplishments</a>
+                                <a href="w3schools.com">Help Center</a>
+                                <a href="w3schools.com">Log out</a>
                            </div>
                         </div>
                         
