--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -17,6 +17,15 @@
                     <img src="C:\Users\HP\Desktop\JACOB okoro\pancake.jpg" class="img-fluid"/>
                 </div>
                 <div class = "col">
+                    <h1>Our Menu</h1>
+                    <h2>Fried rice</h2>
+                    <p>Rice, Green beans, sweet corn</p>
+                    <img src="C:\Users\HP\Desktop\JACOB okoro\Rice.jpg" class="img-fluid"/>
+                    <h2>Pan Cake</h2>
+                    <p>Almond flour,Avocado oil, eggs, Unsweetened Almond milk</p>
+                    <img src="C:\Users\HP\Desktop\JACOB okoro\pancake.jpg" class="img-fluid"/>
+                </div>
+                <div class = "col">
                     <h2>Prices</h2>
                     <table class="table">
                         <tr>
@@ -30,6 +39,7 @@
                     </table>
                     
                 </div>
+                
             </div>
         </div>
     </body>
