--- a/CSS/w3schools.html
+++ b/CSS/w3schools.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <title>W3Schools Online Web Tutorials</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="C:\Users\HP\American_dream_Academy\CSS\w3schools.css" rel="stylesheet">
     </head>
+    <body>
+        <header>
+
+        </header>
+        <nav>
+            <h1 class="learn-to-code">Learn to Code</h1>
+            <p class="with-the">With the world's largest web developer site.</p>
+
+            <p>Search our tutorials, e.g. HTML</p>
+
+           <p><u>Not Sure Where To Begin?</u></p>
+
+        </nav>
+    </body>
 </html>
