--- a/CSS/w3schools.html
+++ b/CSS/w3schools.html
@@ -2,20 +2,33 @@
 <html>
     <head>
         <title>W3Schools Online Web Tutorials</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="C:\Users\HP\American_dream_Academy\CSS\w3schools.css" rel="stylesheet">
     </head>
     <body>
         <header>
+            <div class="header_div1">
+                <span>Tutorials</span>
+                <span>References</span>
+                <span>Exercises</span>
+                <span>Bootcamp</span>
+                <span>Videos</span>
+            </div>
+            <div class="header_div2">
+                <span>Upgrade</span>
+                <span>Get Certified</span>
+                <span>Create Website</span>
+                <span>Sign up</span>
+                <span>Log in</span>
+            </div>
 
         </header>
         <nav>
             <h1 class="learn-to-code">Learn to Code</h1>
             <p class="with-the">With the world's largest web developer site.</p>
 
-            <p>Search our tutorials, e.g. HTML</p>
+            <p class = "container">Search our tutorials, e.g. HTML</p>
 
-           <p><u>Not Sure Where To Begin?</u></p>
+           <a class ="underline"><u>Not Sure Where To Begin?</u></a>
 
         </nav>
     </body>
