--- a/CSS/w3schools.html
+++ b/CSS/w3schools.html
@@ -6,21 +6,20 @@
     </head>
     <body>
         <header>
-            <div class="header_div1">
-                <span>Tutorials</span>
-                <span>References</span>
-                <span>Exercises</span>
-                <span>Bootcamp</span>
-                <span>Videos</span>
-            </div>
-            <div class="header_div2">
-                <span>Upgrade</span>
-                <span>Get Certified</span>
-                <span>Create Website</span>
-                <span>Sign up</span>
-                <span>Log in</span>
-            </div>
-
+            <ul >
+                <li class="li_left">Tutorials</li>
+                <li class="li_left" >References</li>
+                <li class="li_left" >Exercises</li>
+                <li class="li_left">Bootcamp</li>
+                <li class="li_left" >Videos</li>
+            </ul>
+                <ul>
+                    <li class="li_right">Upgrade</li>
+                    <li class="li_right">Get Certified</li>
+                    <li class="li_right">Create Website</li>
+                    <li class="li_right">Sign up</li>
+                    <li   class="li_right" >Log in</li>
+                </ul>
         </header>
         <nav>
             <h1 class="learn-to-code">Learn to Code</h1>
