--- a/CSS/w3schools.html
+++ b/CSS/w3schools.html
@@ -5,23 +5,23 @@
         <link href="C:\Users\HP\American_dream_Academy\CSS\w3schools.css" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <ul >
-                <li class="li_left">Tutorials</li>
-                <li class="li_left" >References</li>
-                <li class="li_left" >Exercises</li>
-                <li class="li_left">Bootcamp</li>
-                <li class="li_left" >Videos</li>
-            </ul>
-                <ul>
-                    <li class="li_right">Upgrade</li>
-                    <li class="li_right">Get Certified</li>
-                    <li class="li_right">Create Website</li>
-                    <li class="li_right">Sign up</li>
-                    <li   class="li_right" >Log in</li>
-                </ul>
-        </header>
         <nav>
+            <ul>
+                <li><a href="facebook.com" class="hover">Tutorials</a></li>
+                <li><a href="w3schools.com" class="hover">References</a></li>
+                <li><a href="openai.com" class="hover">Exercises</a></li>
+                <li><a href="w3schools.com" class="hover">Bootcamp</a></li>
+                <li><a href="facebook.com" class="hover">Videos</a></li>
+                <li><a href="facebook.com" class="end" style="position:relative; left:120px;color:white; background-color:#9763f6;">Upgrade</a></li>
+                <li><a href="facebook.com" class="end pink-border" style="position:relative; left:120px;">Get Certified</a></li>
+                <li><a href="facebook.com" class="end yellow-border-radius" style="position:relative; left:120px">Create Website</a></li>
+                <li><a href="facebook.com" class="end green-border-radius" style="position:relative; left:88px;">Sign Up</a></li>
+                <li><a href="facebook.com" class="end" class ="hover"; style="position:relative; right: 8px; background-color: #D9EEE1; color:black;">Log in</a></li>
+                
+            </ul>
+               
+        </nav>
+        <section>
             <h1 class="learn-to-code">Learn to Code</h1>
             <p class="with-the">With the world's largest web developer site.</p>
 
@@ -29,6 +29,31 @@
 
            <a class ="underline"><u>Not Sure Where To Begin?</u></a>
 
-        </nav>
+        </section>
+        <aside>
+            <div class="left">
+                <h1 style="margin-top:1px; margin-bottom:9px; padding:-7px;  font-weight: 700; font-size: 80px;">HTML</h1>
+                <p style ="margin-top:1px; font-weight: 200; font-size: 19px;"><b>The language for building web pages</b></p>
+                <ul>
+                    <li><a class="green-border-radius">Learn HTML</a></li>
+                    <li><a class="yellow-border-radius">Video Tutorial</a></li>
+                    <li><a class="black-border">HTML Reference</a></li>
+                    <li><a class="pink-border">Get Certified</a></li>
+                </ul>
+            </div>
+            <div>
+                <pre>
+                    <!DOCTYPE html>
+                    <html>
+                    <title>HTML Tutorial</title>
+                    <body>
+                    <h1>This is a heading</h1>
+                    <p>This is a paragraph.</p>
+
+                    </body>
+                    </html>
+                </pre>
+            </div>
+        </aside>
     </body>
 </html>
