--- a/CSS/w3schools.html
+++ b/CSS/w3schools.html
@@ -31,28 +31,26 @@
 
         </section>
         <aside>
-            <div class="left">
-                <h1 style="margin-top:1px; margin-bottom:9px; padding:-7px;  font-weight: 700; font-size: 80px;">HTML</h1>
-                <p style ="margin-top:1px; font-weight: 200; font-size: 19px;"><b>The language for building web pages</b></p>
-                <ul>
-                    <li><a class="green-border-radius">Learn HTML</a></li>
-                    <li><a class="yellow-border-radius">Video Tutorial</a></li>
-                    <li><a class="black-border">HTML Reference</a></li>
-                    <li><a class="pink-border">Get Certified</a></li>
-                </ul>
-            </div>
-            <div>
-                <pre>
-                    <!DOCTYPE html>
-                    <html>
-                    <title>HTML Tutorial</title>
-                    <body>
-                    <h1>This is a heading</h1>
-                    <p>This is a paragraph.</p>
-
-                    </body>
-                    </html>
-                </pre>
+            <ul>
+                <li><h1 style="margin-top:1px; margin-bottom:9px; padding:-7px; font-weight: 700; font-size: 80px;">HTML</h1></li> 
+                <li><p style ="margin-top:1px; font-weight: 200; font-size: 19px;"><b>The language for building web pages</b></p></li>
+                <li><a class="green-border-radius">Learn HTML</a></li>
+                <li><a class="yellow-border-radius">Video Tutorial</a></li>
+                <li><a class="black-border">HTML Reference</a></li>
+                <li><a class="pink-border">Get Certified</a></li>
+            </ul>
+            <div class="inner">
+                <h3>HTML Example: </h3>
+                    <xmp>
+                        <!DOCTYPE html>
+                        <html>
+                        <title>HTML Tutorial</title>
+                        <body>
+                        <h1>This is a heading</h1>
+                        <p>This is a paragraph.</p>
+                        </body>
+                        </html>
+                    </xmp>
             </div>
         </aside>
     </body>
