--- a/CSS/w3schools.html
+++ b/CSS/w3schools.html
@@ -39,18 +39,19 @@
                 <li><a class="black-border">HTML Reference</a></li>
                 <li><a class="pink-border">Get Certified</a></li>
             </ul>
-            <div class="inner">
-                <h3>HTML Example: </h3>
-                    <xmp>
-                        <!DOCTYPE html>
-                        <html>
-                        <title>HTML Tutorial</title>
-                        <body>
-                        <h1>This is a heading</h1>
-                        <p>This is a paragraph.</p>
-                        </body>
-                        </html>
-                    </xmp>
+            <div>
+                <h3 style="position: relative; top:0; left: 0;right: 0;">HTML Example: </h3>
+                <xmp>
+                    <!DOCTYPE html>
+                    <html>
+                    <title>HTML Tutorial</title>
+                    <body>
+                    <h1>This is a heading</h1>
+                    <p>This is a paragraph.</p>
+                    </body>
+                    </html>
+                </xmp>
+                <p class="green-border-radius" style="position: relative; bottom:0; left: 8px;right: 8px; text-align: center;">Try it yourself</p>
             </div>
         </aside>
     </body>
