--- a/CSS/w3schools.html
+++ b/CSS/w3schools.html
@@ -17,11 +17,11 @@
                     <li><a href="">Videos</a></li>
                 </ul>
                 <ul class="nav-right">
-                    <li><a href="" class="purple-border border-radius">Upgrade</a></li>
-                    <li><a href="" class="pink-border border-radius">Get Certified</a></li>
-                    <li><a href="" class="yellow-border-radius border-radius">Create Website</a></li>
-                    <li><a href="" class="green-border-radius border-radius">Sign Up</a></li>
-                    <li><a href="" class="hover light-green-border border-radius">Log in</a></li>
+                    <li><a href="" class="purple border-radius">Upgrade</a></li>
+                    <li><a href="" class="pink border-radius">Get Certified</a></li>
+                    <li><a href="" class="yellow border-radius">Create Website</a></li>
+                    <li><a href="" class="green border-radius">Sign Up</a></li>
+                    <li><a href="" class="hover light-green border-radius">Log in</a></li>
                 </ul>
             </div>
                
@@ -35,18 +35,18 @@
             </form>
             <a class ="underline"><u>Not Sure Where To Begin?</u></a>        
         </section>
-        <div class="div-html">
+        <div class="light-green">
             <aside class="div-outer">
                 <ul>
                     <li class="div-ul-li"><h1 class="headings">HTML</h1></li> 
                     <li class="div-ul-li"><p class ="heading2"><b>The language for building web pages</b></p></li>
-                    <li class="div-ul-li"><a class="green-border-radius border-radius div-ul-li-a">Learn HTML</a></li>
-                    <li class="div-ul-li"><a class="yellow-border-radius border-radius div-ul-li-a">Video Tutorial</a></li>
-                    <li class="div-ul-li"><a class="black-border border-radius div-ul-li-a">HTML Reference</a></li>
-                    <li class="div-ul-li"><a class="pink-border border-radius div-ul-li-a">Get Certified</a></li>
+                    <li class="div-ul-li"><a class="green border-radius div-ul-li-a">Learn HTML</a></li>
+                    <li class="div-ul-li"><a class="yellow border-radius div-ul-li-a">Video Tutorial</a></li>
+                    <li class="div-ul-li"><a class="black border-radius div-ul-li-a">HTML Reference</a></li>
+                    <li class="div-ul-li"><a class="pink border-radius div-ul-li-a">Get Certified</a></li>
                 </ul>
                 <div class="div-inner">
-                    <h3 >HTML Example: </h3>
+                    <h3>HTML Example: </h3>
                     <pre class="div-xmp">
   &lt;!DOCTYPE html&gt;
   &lt;html&gt;
@@ -57,18 +57,18 @@
   &lt;/body&gt;
   &lt;/html&gt;
                     </pre>
-                    <button class="green-border-radius border-radius">Try it yourself</button>
+                    <button class="green border-radius">Try it yourself</button>
                 </div>
             </aside>           
         </div>
-        <div class="div-css">
+        <div class="yellow">
             <article class="div-outer">
                 <ul>
                     <li class="div-ul-li"><h1 class="headings">CSS</h1></li>
                     <li class="div-ul-li"><p class="heading2"><b>The language for styling web pages</b></p></li>
-                    <li class="div-ul-li"><a class="green-border-radius border-radius div-ul-li-a">Learn css</a></li>
-                    <li class="div-ul-li"><a class="black-border border-radius div-ul-li-a">CSS Reference</a></li>
-                    <li class="div-ul-li"><a class="pink-border border-radius div-ul-li-a">Get Certified</a></li>
+                    <li class="div-ul-li"><a class="green border-radius div-ul-li-a">Learn css</a></li>
+                    <li class="div-ul-li"><a class="black border-radius div-ul-li-a">CSS Reference</a></li>
+                    <li class="div-ul-li"><a class="pink border-radius div-ul-li-a">Get Certified</a></li>
                 </ul>
                 <div class="div-inner">
                     <h3>CSS Example:</h3>
@@ -84,18 +84,18 @@ body {
     font-family: verdana;
     }
                         </pre>
-                    <button class="green-border-radius border-radius">Try it yourself</button>
+                    <button class="green border-radius">Try it yourself</button>
                 </div>
             </article>
         </div>
-        <div class="div-javascript">
+        <div class="black">
             <header class="div-outer">
                 <ul>
                     <li class="div-ul-li"><h1 class="headings" style="color: white">Javascript</h1></li>
                     <li class="div-ul-li"><p class="heading2" style="color: white;"><b>The language for programming web pages</b></p></li>
-                    <li class="div-ul-li"><a class="div-ul-li-a green-border-radius border-radius">Learn Javascript</a></li>
-                    <li class="div-ul-li"><a class="div-ul-li-a white-border border-radius">Javascript Reference</a></li>
-                    <li class="div-ul-li"><a class="div-ul-li-a pink-border border-radius">Get Certified</a></li>
+                    <li class="div-ul-li"><a class="div-ul-li-a green border-radius">Learn Javascript</a></li>
+                    <li class="div-ul-li"><a class="div-ul-li-a white border-radius">Javascript Reference</a></li>
+                    <li class="div-ul-li"><a class="div-ul-li-a pink border-radius">Get Certified</a></li>
                 </ul>
                 <div class="div-inner">
                     <h3>Javascript Example:</h3>
@@ -109,18 +109,18 @@ function myFunction() {
 }
 &lt;/script&gt;
                     </pre>
-                    <button class="green-border-radius border-radius">Try it yourself</button>
+                    <button class="green border-radius">Try it yourself</button>
                 </div>
             </header>
         </div> 
-        <div class="div-python">
+        <div class="light-pink">
             <header class="div-outer">
                 <ul>
                     <li class="div-ul-li"><h1 class="headings">Python</h1></li>
                     <li class="div-ul-li"><p class="heading2"><b>A popular programming language</b></p></li>
-                    <li class="div-ul-li"><a class="div-ul-li-a green-border-radius border-radius">Learn Python</a></li>
-                    <li class="div-ul-li"><a class="div-ul-li-a black-border border-radius"> Python Reference</a></li>
-                    <li class="div-ul-li"><a class="div-ul-li-a pink-border border-radius">Get Certified</a></li>
+                    <li class="div-ul-li"><a class="div-ul-li-a green border-radius">Learn Python</a></li>
+                    <li class="div-ul-li"><a class="div-ul-li-a black border-radius"> Python Reference</a></li>
+                    <li class="div-ul-li"><a class="div-ul-li-a pink border-radius">Get Certified</a></li>
                 </ul>
                 <div class="div-inner">
                     <h3>Python Example:</h3>
@@ -128,18 +128,18 @@ function myFunction() {
 if 5 > 2:
     print("Five is greater than two!")
                     </pre>
-                    <button class="green-border-radius border-radius">Try it yourself</button>
+                    <button class="green border-radius">Try it yourself</button>
                 </div>
             </header>
         </div> 
-        <div class="div-sql">
+        <div class="blue">
             <header class="div-outer">
                 <ul>
                     <li class="div-ul-li"><h1 class="headings">SQL</h1></li>
                     <li class="div-ul-li"><p class="heading2"><b>A language for accessing databases</b></p></li>
-                    <li class="div-ul-li"><a class="div-ul-li-a green-border-radius border-radius">Learn SQL</a></li>
-                    <li class="div-ul-li"><a class="div-ul-li-a black-border border-radius">SQL Reference</a></li>
-                    <li class="div-ul-li"><a class="div-ul-li-a pink-border border-radius">Get Certified</a></li>
+                    <li class="div-ul-li"><a class="div-ul-li-a green border-radius">Learn SQL</a></li>
+                    <li class="div-ul-li"><a class="div-ul-li-a black border-radius">SQL Reference</a></li>
+                    <li class="div-ul-li"><a class="div-ul-li-a pink border-radius">Get Certified</a></li>
                 </ul>
                 <div class="div-inner">
                     <h3>SQL Example:</h3>
@@ -147,9 +147,54 @@ if 5 > 2:
 SELECT * FROM Customers
 WHERE Country='Mexico';
                     </pre>
-                    <button class="green-border-radius border-radius">Try it yourself</button>
+                    <button class="green border-radius">Try it yourself</button>
                 </div>
             </header>
         </div> 
+        <div class="black container">
+            <div class="pink">
+                <ul>
+                    <li> <h1>PHP</h1></li>
+                    <li><p>A web server programming language</p></li>
+                    <li><a class="border-radius black">Learn PHP</a></li>
+                </ul>
+            </div>
+            <div class="yellow">
+                <ul>
+                    <li> <h1>jQuery</h1></li>
+                    <li><p>A JS library for developing web pages</p></li>
+                    <li><a class="border-radius black">Learn jQuery</a></li>
+                </ul>
+            </div>
+            <div class="light-pink">
+                <ul>
+                <li><h1>Java</h1></li>
+                <li><p>A programming language</p></li>
+                <li><a class="border-radius black">Learn Java</a></li>
+                </ul>
+            </div>
+            <div class="light-green">
+                <ul>
+                <li> <h1>C++</h1></li>
+                <li><p>A Programming language</p></li>
+                <li><a class="border-radius black">Learn C++</a></li>
+                </ul>
+            </div>
+            <div class="blue">
+                <ul>
+                <li> <h1>W3.CSS</h1></li>
+                <li><p>A CSS framework for faster and better responsive web pages
+                <li><a class="border-radius black">Learn W3.CSS</a></li>
+                </ul>
+            </div>
+            <div class="white">
+                <ul>
+                <li> <h1>Bootstrap</h1></li>
+                <li><p>A CSS framework for designing better web pages</p></li>
+                <li><a class="border-radius black">Learn Bootstrap</a></li>
+                </ul>
+            </div>
+
+        </div>
     </body>
 </html>
