--- a/CSS/w3schools.html
+++ b/CSS/w3schools.html
@@ -330,13 +330,16 @@ WHERE Country='Mexico';
                             </div>
                             <div class="trySearch">www.w3schools.com/tryit/</div>
                         </div>
-                            <span>Frontend</span>
-                            <span>Backend</span>
+                        <div class="btns">
+                            <p class="noHov"><b>Frontend</b></p>
+                            <p class="hov"><b>Backend</b></p>
                         </div>
                     </div>
-                    <!--<video width="100px" height="300px" autoplay muted>
+                    <video autoplay muted>
                         <source src="C:\Users\HP\Downloads\img1.mp4" type="video/mp4">
-                    </video>-->
+                    </video>
+                    <div class="tryGreen green"><b>Try Frontend Editor (HTML/CSS/JS)</b></div>
+                    <div class="tryYellow"><b>Try Backend Editor (Python/PHP/Java/C..)</b></div>
                 </div>
             </div>
         </div>
