--- a/CSS/w3schools.html
+++ b/CSS/w3schools.html
@@ -338,9 +338,9 @@ WHERE Country='Mexico';
                     <video autoplay muted>
                         <source src="C:\Users\HP\Downloads\img1.mp4" type="video/mp4">
                     </video>
-                    <div class="tryGreen green"><b>Try Frontend Editor (HTML/CSS/JS)</b></div>
-                    <div class="tryYellow"><b>Try Backend Editor (Python/PHP/Java/C..)</b></div>
                 </div>
+                <div class="tryGreen green"><b>Try Frontend Editor (HTML/CSS/JS)</b></div>
+                <div class="tryYellow yellow"><b>Try Backend Editor (Python/PHP/Java/C..)</b></div>
             </div>
         </div>
     </body>
