--- a/CSS/w3schools.html
+++ b/CSS/w3schools.html
@@ -331,17 +331,48 @@ WHERE Country='Mexico';
                             <div class="trySearch">www.w3schools.com/tryit/</div>
                         </div>
                         <div class="btns">
-                            <p class="noHov"><b>Frontend</b></p>
-                            <p class="hov"><b>Backend</b></p>
+                            <button><b>Frontend</b></button>
+                            <button><b>Backend</b></button>
                         </div>
                     </div>
                     <video autoplay muted>
                         <source src="C:\Users\HP\Downloads\img1.mp4" type="video/mp4">
                     </video>
                 </div>
-                <div class="tryGreen green"><b>Try Frontend Editor (HTML/CSS/JS)</b></div>
-                <div class="tryYellow yellow"><b>Try Backend Editor (Python/PHP/Java/C..)</b></div>
+                <div class="tryGreen green">Try Frontend Editor (HTML/CSS/JS)</div>
+                <div class="tryYellow yellow">Try Backend Editor (Python/PHP/Java/C..)</div>
+                <h1 class="spaces">W3Schools Spaces</h1>
+                <p class="paragraph">If you want to create your own website, check out <a href="">W3Schools Spaces</a>.</p>
+                <p  class="paragraph">It is free to use, and does not require any setup:</p>
+                <video class="adrienne"autoplay muted>
+                    <source src="C:\Users\HP\Downloads\img2.mp4" type="video/mp4">
+                </video>
+                <img src="C:\Users\HP\Desktop\JACOB okoro\how-spaces-works3.png" alt="How it works">
+                <a class="green border-radius learn">Learn more</a>
             </div>
+        </div>
+        <div class="light-green my-learning">
+            <h1><b>My Learning</b></h1>
+            <p>Track your progress with our <b>free</b> "My Learning" program.</p>
+            <p>Log in to your account, and start earning points!</p>
+            <img src="C:\Users\HP\Desktop\JACOB okoro\learn.png" alt="">
+            <a class="green border-radius sign-up">Sign Up for Free</a>
+        </div>
+        <div class="black my-learning">
+            <h1>Become a PRO User</h1>
+            <p>And unlock powerful features:</p>
+            <p class="check">
+                <img src="C:\Users\HP\Desktop\JACOB okoro\check.svg" alt="">
+                Browse W3Schools without ads
+            </p>
+            <p class="check">
+                <img src="C:\Users\HP\Desktop\JACOB okoro\check.svg" alt="">
+                Website hosting (Includes Spaces PRO)
+            </p>
+            <p class="check">
+                <img src="C:\Users\HP\Desktop\JACOB okoro\check.svg" alt="">
+                Access to our HTML Video Tutorial
+            </p>
         </div>
     </body>
 </html>
