--- a/CSS/w3schools.html
+++ b/CSS/w3schools.html
@@ -3,6 +3,7 @@
     <head>
         <title>W3Schools Online Web Tutorials</title>
         <link href="w3schools.css" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Freckle Face' rel='stylesheet'>
         <script src="https://kit.fontawesome.com/e26e4a68b3.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -358,21 +359,41 @@ WHERE Country='Mexico';
             <img src="C:\Users\HP\Desktop\JACOB okoro\learn.png" alt="">
             <a class="green border-radius sign-up">Sign Up for Free</a>
         </div>
-        <div class="black my-learning">
+        <div class="pro black my-learning">
             <h1>Become a PRO User</h1>
-            <p>And unlock powerful features:</p>
+            <p class="unlock">And unlock powerful features:</p>
             <p class="check">
                 <img src="C:\Users\HP\Desktop\JACOB okoro\check.svg" alt="">
                 Browse W3Schools without ads
             </p>
             <p class="check">
                 <img src="C:\Users\HP\Desktop\JACOB okoro\check.svg" alt="">
-                Website hosting (Includes Spaces PRO)
+                Website hosting (Includes <a href="" class="underline">Spaces</a> PRO)
             </p>
             <p class="check">
                 <img src="C:\Users\HP\Desktop\JACOB okoro\check.svg" alt="">
-                Access to our HTML Video Tutorial
+                Access to our <a href="" class="underline">HTML Video Tutorial</a>
             </p>
+            <a class="green">Learn more</a>
+        </div>
+        <div class="light-pink my-learning">
+            <h1>Color Picker</h1>
+            <p>W3Schools' famous color picker:</p>
+            <img src="C:\Users\HP\Desktop\JACOB okoro\colorpicker.png" alt="">
+        </div>
+        <div class="lynx blue my-learning">
+            <h3>Code Game</h3>
+            <p>Help the Lynx collect pine cones!</p>
+            <img src="C:\Users\HP\Desktop\JACOB okoro\lynx.png" alt="">
+            <a class= "black border-radius"href="">Play Game</a>
+        </div>
+        <div class="Quiz black my-learning">
+            <h1>Exercises and Quizzes</h1>
+            <p>Test your skills!</p>
+            <div class="YG">
+                <div class="yellow"><a  href="">Exercises</a></div>
+                <div class="green"><a href="">Quizzes</a></div>
+            </div>
         </div>
     </body>
 </html>
